[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Roboto-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/menu_icon.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1025.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shared" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OurLabel" type="Label" parent="Shared"]
margin_left = 17.7215
margin_top = 6.11372
margin_right = 124.722
margin_bottom = 44.1137
custom_fonts/font = SubResource( 1 )
text = "None"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Turn" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnLabel" type="Label" parent="Turn"]
margin_left = 574.318
margin_top = 6.33985
margin_right = 700.32
margin_bottom = 44.3399
custom_fonts/font = SubResource( 1 )
text = "None"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveLabel" type="Label" parent="Turn"]
margin_left = 658.497
margin_top = 7.23561
margin_right = 737.494
margin_bottom = 45.2356
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="Turn"]
margin_left = 743.679
margin_top = 5.1591
margin_right = 890.679
margin_bottom = 43.1591
custom_fonts/font = SubResource( 1 )
text = "Time:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="Turn"]
margin_left = 879.27
margin_top = 7.236
margin_right = 936.268
margin_bottom = 45.236
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 960.47
margin_top = 4.47571
margin_right = 1055.47
margin_bottom = 68.4757
rect_scale = Vector2( 0.64, 0.64 )
size_flags_horizontal = 5
texture_normal = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TextureButton" to="." method="toggle_main_menu"]
